# opendnie

./: README  README.md
common/: card_structures.h~  map.c~  map_helper.h
db/: uuid
db/revprops/0/: 0
dgp-devel/: LEEME  opensc-0.12.x-dnie.patch  opensc-dnie.spec
dgp-devel-0.11.13/: LEEME  opensc-0.11.13-dnie.patch
dgp-devel-0.11.13/src/libopensc/dnie/: Makefile.am  card_structures.h  card_sync.c  dialog.c  map.c  pkcs15_standard.c  util.c  util.h  virtual_fs.h
dgp-devel-svntrunk/: LEEME  opensc-0.12.x-dnie.patch
dgp-devel-svntrunk/fedora/: build_rpm.sh  opensc-dnie.spec
dgp-devel-svntrunk/src/libopensc/dnie/: card_helper.c  file_compression.h
dgp-devel/fedora/: build_rpm.sh  opensc-dnie.spec
dgp-devel/src/libopensc/dnie/: Makefile.am  base_card.c  card_helper.h  card_structures.h  card_sync.c  dialog.c  pkcs15_default.c  pkcs15_default.h  pkcs15_standard.c  trusted_channel_card.c  virtual_fs.h
dgp-sources/common/: map.h
dgp-sources/libcard/: card_sync.c  libopensc-dnie.pc.in  pkcs15_default.h  pkcs15_standard.h
dgp-static/common/: map_helper.c  util.c  util.h
dgp-static/include/: internal.h
dgp-static/libcard/: base_card.c  card_helper.c  pkcs15_standard.c  virtual_pkcs15_fs.c  virtual_pkcs15_fs.h
include/: base_cardctl.h
libcard/: Makefile.am  base_card.h  card_helper.h  dialog.c  file_compression.h  pkcs15_default.c  trusted_channel_card.c  virtual_fs.c
opendnie/: LEEME  Makefile.am  opensc-0.12.x-dnie.patch  opensc-opendnie-0.12.x.patch
opendnie/common/: i18n.h
opendnie/libcard/: card_sync.h  file_compression.c
opendnie/src/libopensc/: card-dnie.c  dnie.h  sm-dnie.c
opensc-dnie/branches/0.11.13/: LEEME  configure.ac
opensc-dnie/branches/0.11.13/etc/: opensc.conf.in
opensc-dnie/branches/0.12.0/: Makefile.am  configure.ac  configure.ac.orig
opensc-dnie/branches/0.12.0/etc/: opensc.conf.in
opensc-dnie/trunk/: LEEME  configure.ac
opensc-dnie/trunk/etc/: opensc.conf.in
opensc-dnie/trunk/src/libopensc/: Makefile.am  card-mcrd.c  cards.h  ctx.c  types.h
opensc-opendnie/branches/0.12.0/: Makefile.in
opensc-opendnie/branches/0.12.1/: LEEME  Makefile.am
opensc-opendnie/trunk/: LEEME  configure.ac
opensc-opendnie/trunk/etc/: opensc.conf.in
opensc-opendnie/trunk/win32/: Make.rules.mak  OpenSC.wxs.in  installer_from_build.sh
packaging/debian/: README.txt
packaging/debian/trunk/debian/: rules  (+13 more)
tests/: Makefile  hex2bin.c  hexdump.c  pinentry_test.c  pinentry_test2.c  test.hex
tests/dnie_emu/: README  build.sh  emu.c
tests/sign_text/: 1-extract_certificates.sh  2-verify_certificate.sh  3-make_signature.sh  4-verify_signature.sh  ACDNIE001-SHA1.pem  ACDNIE002-SHA1.pem  ACDNIE003-SHA1.pem  ACRAIZ-SHA1.pem  AVDNIEFNMTSHA1.pem  configuration.sh  lorenipsum.txt
(+146 files in other folders)
